// $Id: CHANGELOG.txt,v 1.164 2010/09/15 16:44:50 alexb Exp $

Feeds 6.x xxxxxxxxxxxxxxxxxxxxxx
--------------------------------

- #755556 Monkey Master, andrewlevine, alex_b: Support saving local files in
  filefields.
- #891982 bangpound, twistor: Support Link 2.x.
- #870278 budda: Fix SQL query in taxonomy_get_term_by_name_vid().
- #795114 budda, alex_b: Taxonomy term processor doesn't require vocabulary to
  be set.

Feeds 6.x 1.0 Beta 5, 2010-09-10
--------------------------------

- #849840 adityakg, rbayliss, alex_b: Submit full mapping on every submission.
- #849834 rbayliss, alex_b: Generalize feeds_config_form() to feeds_form().
- #907064 alex_b: Track imported terms.
- #906720 alex_b: Introduce a hook_feeds_after_clear().
- #905820 tristan.oneil: Adjust delete message in FeedsDataProcessor to avoid
  misleading total numbers.
- #671538 mburak: Use CURLOPT_TIMEOUT to limit download time of feeds.
- #878002 Will White, David Goode: Support multiple sources per mapping target
  in FeedsDataProcessor.
- #904804 alex_b: Support exportable vocabularies.
- #836876 rsoden, Will White, alex_b: Add simple georss support to Common
  Syndication Parser.
- #889196 David Goode: Support for non-numeric vocabulary IDs for feature-based
  vocabularies.
- #632920 nickbits, dixon_, David Goode, alex_b et al: Inherit OG, taxonomy,
  language, user properties from parent feed node. Note: Signatures of
  FeedsProcessor::map(), existingItemId(), FeedsParser::getSourceElement()
  changed.
- #897258 TrevorBradley, alex_b: Mapping target nid.
- #873198 BWPanda, morningtime: Import multiple values to tag vocabulary.
- #872772 andrewlevine: Fix buildNode() (and node_load()) called unnecessarily.
- #873240 thsutton: Use isset() to avoid notices.
- #878528 Sutharsan: Don't show file in UI if file does not exist.
- #901798 alex_b: Fix time off in SitemapParser.
- #885724 eliotttf: Avoid array_flip() on non scalars.
- #885052 Hanno: Fix small typo in access rights.