@@ -1,5 +1,5 @@
 <?php
-// $Id: feeds.api.php,v 1.15 2010/09/09 16:10:41 alexb Exp $
+// $Id: feeds.api.php,v 1.16 2010/09/15 18:28:33 alexb Exp $
 
 /**
  * @mainpage
@@ -85,6 +85,19 @@ function hook_feeds_plugins() {
  * @defgroup import Import and clear hooks
  * @{
  */
+
+/**
+ * Invoked after a feed source has been parsed, before it will be processed.
+ *
+ * @param $importer
+ *   FeedsImporter object that has been used for importing the feed.
+ * @param $source
+ *  FeedsSource object that describes the source that has been imported.
+ */
+function hook_feeds_after_parse(FeedsImporter $importer, FeedsSource $source) {
+  // For example, set title of imported content:
+  $source->batch->setTitle('Import number '. my_module_import_id());
+}
 
 /**
  * Invoked after a feed source has been imported.
